--- a/Rmarkdown/Project2_nodefault.Rmd
+++ b/Rmarkdown/Project2_nodefault.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Project2 - removing default"
 author: "Rinku Lichti, Simerpreet Reddy, Megan Ball"
-date: "11/4/2020"
+date: "12/2/2020"
 output: html_document
 ---
 
@@ -270,13 +270,20 @@ Visually looking, conversion rate seems to be higher for 'single' people
 ### Analyzing duration and creating duration group variable
 ```{r}
 summary(df$duration)
-df$duration_group <-   cut(df$duration,       breaks = c(-Inf,100,60,300,600,Inf),       labels = c("0-30s", "30-60s", "1-5 min", "5-10min","10+ min"))
+df$duration_group <-
+  cut(
+    df$duration,
+    breaks = c(-Inf, 300, 600, Inf),
+    labels = c("0-5min", "5-10min", "10+ min")
+  )
 # Check for missing values
 tibble(variable = names(colSums(is.na(df))),
-       missing = colSums(is.na(df))) %>% 
-  gt() %>% 
+       missing = colSums(is.na(df))) %>%
+  gt() %>%
   tab_header(title = "Missing Values in Data")
-df3 <- df %>%  group_by(duration_group) %>%  count(y) %>%  mutate(duration_group_conv = n/sum(n)) %>%  filter(y == "yes")
+df3 <-
+  df %>%  group_by(duration_group) %>%  count(y) %>%  mutate(duration_group_conv = n /
+                                                               sum(n)) %>%  filter(y == "yes")
 
 df3
 #ggplot(df3, aes(x=duration_group, y=duration_group_conv)) +  geom_point() +  facet_wrap(~ y)
@@ -353,13 +360,14 @@ RFresults <- rfe(downsample[,1:22], downsample[[23]], sizes=subsets, rfeControl=
 RFresults
 varImp(RFresults)
 ```
+Top 12 variables according to ranodm forest: duration, duration_group, month, euribor3m, nr_employed, emp_var_rate, cons_conf_idx, cons_price_idx, pdays, poutcome, contact, Age_Grp
 
 ```{r}
 #save dataset to this point
 #df_nodefault <- write.csv(df, "df_nodefault.csv", row.names = FALSE)
 
 #open saved dataframe
-#df <- read.csv(here::here("data", "df_clean.csv"), stringsAsFactors = TRUE)
+#df <- read.csv("df_nodefault.csv"), stringsAsFactors = TRUE)
 #str(df)
 ```
 
@@ -396,6 +404,8 @@ ggplot(data = pc.scores2, aes(x = PC3, y = PC4)) +
   ggtitle("PCA of Numeric Data post-EDA")
 
 ```
+
+Essentially no change.
 
 # Train/Test Split
 
@@ -452,6 +462,7 @@ vif(simple.log)
 
 
 Remove variables with high vifs and run the model again
+
 ```{r}
 #pdays / prevly_Cntctd
 
@@ -464,12 +475,12 @@ exp(cbind("Odds ratio" = coef(simple.log), confint.default(simple.log, level = 0
 vif(simple.log)
 ```
 
-Still have very high VIF for emp_var_rate, euribor3m, and nr_employed. Age and Age_Grp are also correlated, so remove Age_grp due to higher VIF. Remove those and re-run.
+Still have very high VIF for emp_var_rate, euribor3m, and nr_employed. Remove those and re-run.
 
 
 
 ```{r}
-train_simple_2 <- train_simple %>% dplyr::select(-emp_var_rate, -euribor3m, -nr_employed, -Age_Grp)
+train_simple_2 <- train_simple %>% dplyr::select(-emp_var_rate, -euribor3m, -nr_employed)
 
 simple.log<-glm(y~.,family="binomial",data=train_simple_2)
 summary(simple.log)
@@ -477,15 +488,25 @@ summary(simple.log)
 vif(simple.log)
 ```
 
-VIFs look good.
-
-Remove statistically insignificant variables and run the model again
+Remove Age_grp. suspect they are flagging due to correlation. 
 
 ```{r}
-train_simple_3 <- train_simple_2 %>% dplyr::select(-age, -housing, -loan, -day_of_week)
+train_simple_3 <- train_simple_2 %>% dplyr::select(-Age_Grp)
 
 #Check model again
 simple.log<-glm(y~.,family="binomial",data=train_simple_3)
+summary(simple.log)
+#exp(cbind("Odds ratio" = coef(simple.log), confint.default(simple.log, level = 0.95)))
+vif(simple.log)
+```
+
+Remove statistically insignificant variables and run the model again. 
+
+```{r}
+train_simple_4 <- train_simple_3 %>% dplyr::select(-age, -housing, -loan, -day_of_week)
+
+#Check model again
+simple.log<-glm(y~.,family="binomial",data=train_simple_4)
 summary(simple.log)
 #exp(cbind("Odds ratio" = coef(simple.log), confint.default(simple.log, level = 0.95)))
 vif(simple.log)
@@ -501,7 +522,7 @@ fit.pred.simple<-predict(simple.log,newdata=test, type="response")
 
 class.simple<-factor(ifelse(fit.pred.simple>0.5,"yes","no"),levels=c("no","yes"))
 # use caret and compute a confusion matrix
-confusionMatrix(class.simple,test$y)
+confusionMatrix(class.simple,test$y, positive = "yes")
 ```
 
 
@@ -521,7 +542,7 @@ vif(step.log)
 
 ```{r}
 #Remove variables with high vifs and run the model again
-train_step <- train %>% dplyr::select(-emp_var_rate)
+train_step <- train %>% dplyr::select(-emp_var_rate, euribor3m)
 #Check vifs again
 full.log<-glm(y~.,family="binomial",data=train_step)
 step.log<-full.log %>% stepAIC(trace=FALSE)
@@ -848,7 +869,7 @@ Accuracy
 Run Initial Logistic Regression allowing for interaction
 ```{r}
 #computer memory issues - start with only one added interaction
-complex.log<-glm(y~ education + default + month + duration + campaign + poutcome + cons_price_idx + euribor3m + Age_Grp + duration*poutcome,family="binomial",data=train)
+complex.log<-glm(y~ education + contact + month + duration + campaign + previous + cons_price_idx + cons_conf_idx + euribor3m + Age_Grp + prevly_Cntctd + duration*contact,family="binomial",data=train)
 summary(complex.log)
 exp(cbind("Odds ratio" = coef(complex.log), confint.default(complex.log, level = 0.95)))
 ```
@@ -856,14 +877,14 @@ exp(cbind("Odds ratio" = coef(complex.log), confint.default(complex.log, level =
 Testing for some interactions based on EDA
 
 ```{r}
-complex.log<-glm(y~ education + default + month + duration + campaign + poutcome + cons_price_idx + euribor3m + Age_Grp + Age_Grp*education + campaign*duration + default*poutcome + cons_price_idx*euribor3m + month* euribor3m,family="binomial",data=train)
+complex.log<-glm(y~ education + contact + month + duration + campaign + previous + cons_price_idx + cons_conf_idx + euribor3m + Age_Grp + prevly_Cntctd + duration*contact + Age_Grp*education + campaign*duration + cons_price_idx*euribor3m + month*euribor3m,family="binomial",data=train)
 summary(complex.log)
 #exp(cbind("Odds ratio" = coef(complex.log), confint.default(complex.log, level = 0.95)))
 
 #complex.pred <- predict(complex.log, newdata = test, type="response")
 ```
 
-Duration and campaign is significant but has a small coefficient/odds ratio. Month and euribor3m are significant as an interaction term with some odds ratios being very large. Education and age group is not significant for interaction. 
+Duration and campaign is significant but has a small coefficient/odds ratio. Month and euribor3m are significant as an interaction term but month alone isn't very significant. Education and age group is not significant for interaction. 
 
 # Additional EDA for interaction
 
@@ -875,30 +896,33 @@ ggplot(df, aes(x=education , y=emp_var_rate, fill = y)) +  geom_boxplot() +   gg
 
 ggplot(df, aes(x=month , y=emp_var_rate, fill = y)) +  geom_boxplot() +   ggtitle("Month vs. emp.var.rate")
 
-ggplot(df, aes(x=default , y=duration, fill = y)) +  geom_boxplot() +   ggtitle("Default vs. Duration")
+ggplot(df, aes(x=contact , y=duration, fill = y)) +  geom_boxplot() +   ggtitle("Contact vs. Duration")
 
-ggplot(df, aes(x=default , y=campaign, fill = y)) +  geom_boxplot() +   ggtitle("Default vs. Campaign")
+ggplot(df, aes(x=contact , y=campaign, fill = y)) +  geom_boxplot() +   ggtitle("Contact vs. Campaign")
 
-ggplot(df, aes(x=default , y=cons_price_idx, fill = y)) +  geom_boxplot() +   ggtitle("Default vs. cons.price.idx")
+ggplot(df, aes(x=prevly_Cntctd , y=cons_price_idx, fill = y)) +  geom_boxplot() +   ggtitle("prevly_Cntctd vs. cons.price.idx")
 
-ggplot(df, aes(x=default , y=euribor3m, fill = y)) +  geom_boxplot() +   ggtitle("Default vs. euribor3m")
+ggplot(df, aes(x=prevly_Cntctd , y=euribor3m, fill = y)) +  geom_boxplot() +   ggtitle("prevly_Cntctdt vs. euribor3m")
+
+ggplot(df, aes(x=prevly_Cntctd , y=campaign, fill = y)) +  geom_boxplot() +   ggtitle("prevly_Cntctdt vs. campaign")
+
+ggplot(df, aes(x=prevly_Cntctd , y=previous, fill = y)) +  geom_boxplot() +   ggtitle("prevly_Cntctdt vs. previous")
 ```
 
 ```{r}
 #tables for categoricals
-prop.table(table(df_yes$default,df_yes$month),2)
-prop.table(table(df_No$y,df_No$month),2)
+prop.table(table(df_yes$contact,df_yes$prevly_Cntctd),2)
+prop.table(table(df_No$contact,df_No$prevly_Cntctd),2)
 ```
 
-Add in some interactions based on what we see from these charts: education/empvarrate, default/duration, default/euribor3m, default/month and keeping in month/euribor3m
+Add in some interactions based on what we see from these charts: contact/duration, contact/previouslycontacted and keeping in duration/campaign
 
 ```{r}
-complex.log<-glm(y~ education + default + month + duration + campaign + poutcome + cons_price_idx + euribor3m + Age_Grp + month* euribor3m + education * emp_var_rate + default * duration + default * euribor3m + default * month,family="binomial",data=train)
+complex.log<-glm(y~ education + contact + month + duration + campaign + previous + cons_price_idx + cons_conf_idx + euribor3m + Age_Grp + prevly_Cntctd + contact*duration + contact*prevly_Cntctd + duration*campaign, family="binomial",data=train)
 summary(complex.log)
 
 ```
 
-Default being unknown seems to carry some sort of significance in our model. We are keeping it in as we are not counting it as 'missing' but moreso as an actual 'unknown' value.
 
 ### Run step-wise selection on this model
 
@@ -910,15 +934,13 @@ summary(step.complex)
 #Check metrics with standard 0.5 accuracy and our 0.15 accuracy for simple log model
 
 ```{r}
+complex.pred <- predict(step.complex, newdata = test, type="response")
 
 #ROCR
 results.complex<-prediction(complex.pred, test$y,label.ordering=c("no","yes"))
 roc.complex = performance(results.complex, measure = "tpr", x.measure = "fpr")
 plot(roc.complex,colorize = TRUE)
 abline(a=0, b= 1)
-
-
-complex.pred <- predict(step.complex, newdata = test, type="response")
 
 cutoff<-0.5
 class.complex<-factor(ifelse(complex.pred>cutoff,"yes","no"),levels=c("no","yes"))
@@ -974,7 +996,7 @@ auc.train <- auc.train@y.values
 plot(roc.perf, colorize = TRUE)
 abline(a=0, b= 1)
 text(x = .40, y = .6,paste("AUC = ", round(auc.train[[1]],3), sep = ""))
-#AUC = 0.921
+#AUC = 0.922
 ```
 
 ```{r}
@@ -995,7 +1017,7 @@ auc.train <- auc.train@y.values
 plot(roc.perf, colorize = TRUE)
 abline(a=0, b= 1)
 text(x = .40, y = .6,paste("AUC = ", round(auc.train[[1]],3), sep = ""))
-#AUC = 0.919
+#AUC = 0.92
 ```
 
 Run CV loop for LDA
@@ -1028,15 +1050,15 @@ for (i in 1:nloops){
 
 hist(cv.aucs)
 summary(cv.aucs)
-#Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-#0.9098  0.9186  0.9211  0.9212  0.9242  0.9342 
+#   Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+# 0.9110  0.9185  0.9205  0.9210  0.9240  0.9308  
 ```
 
 LDA had good results keeping all numeric variables in the data with 50-fold CV
 
 ```{r}
 #test using just the numeric ones from our best step model
-fit.lda_step <- lda(train.lda.y ~ duration + campaign + cons_price_idx + euribor3m, data = train.lda.x)
+fit.lda_step <- lda(train.lda.y ~ duration + campaign + cons_price_idx + cons_conf_idx + euribor3m, data = train.lda.x)
 pred.lda_step <- predict(fit.lda_step, newdata = train.lda.x)
 
 preds_step <- pred.lda_step$posterior
@@ -1049,7 +1071,7 @@ auc.train_step <- auc.train_step@y.values
 plot(roc.perf_step, colorize = TRUE)
 abline(a=0, b= 1)
 text(x = .40, y = .6,paste("AUC = ", round(auc.train_step[[1]],3), sep = ""))
-#AUC = 0.907
+
 
 #running cv on train set using LDA with subset of numeric vars
 nloops<-50   #number of CV loops
@@ -1078,8 +1100,8 @@ for (i in 1:nloops){
 
 hist(cv.aucs_2)
 summary(cv.aucs_2)
-#Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-#0.8962  0.9029  0.9068  0.9065  0.9088  0.9174 
+  # Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+ #0.8987  0.9041  0.9065  0.9071  0.9096  0.9175 
 ```
 
 The subset using the numeric vars from our step logistic model has very similar performance
@@ -1132,13 +1154,13 @@ for (i in 1:nloops){
 
 hist(cv.aucs_qda)
 summary(cv.aucs_qda)
-#Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-#0.8860  0.8919  0.8959  0.8963  0.9005  0.9091 
+#  Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+# 0.8864  0.8915  0.8956  0.8965  0.9013  0.9084
 ```
 
 ### QDA on train set
 ```{r}
-fit.qda <- qda(train.lda.y ~ duration + campaign + cons_price_idx + euribor3m, data = train.lda.x)
+fit.qda <- qda(train.lda.y ~ duration + campaign + cons_price_idx + cons_conf_idx + euribor3m, data = train.lda.x)
 pred.qda <- predict(fit.qda, newdata = train.lda.x)
 
 preds_qda <- pred.qda$posterior
@@ -1151,7 +1173,7 @@ auc.train_qda <- auc.train_qda@y.values
 plot(roc.perf_qda, colorize = TRUE)
 abline(a=0, b= 1)
 text(x = .40, y = .6,paste("AUC = ", round(auc.train_qda[[1]],3), sep = ""))
-#AUC = 0.896
+#AUC = 0.903
 
 # Test Set
 pred.qda1 <- predict(fit.qda, newdata = test.lda.x)
@@ -1166,7 +1188,7 @@ auc.train_qda1 <- auc.train_qda1@y.values
 plot(roc.perf_qda1)
 abline(a=0, b= 1)
 text(x = .40, y = .6,paste("AUC = ", round(auc.train_qda1[[1]],3), sep = ""))
-#AUC = 0.895
+#AUC = 0.902
 ```
 
 ```{r}
@@ -1184,7 +1206,7 @@ for (i in 1:nloops){
   cvtrain.yshuf<-dat.train.yshuf[index]
   cvtest.yshuf<-dat.train.yshuf[-index]
   
-  cvfit_shuf <- lda(cvtrain.yshuf ~ duration + campaign + cons_price_idx + euribor3m, data = cvtrain.x)
+  cvfit_shuf <- lda(cvtrain.yshuf ~ duration + campaign + cons_price_idx + cons_conf_idx + euribor3m, data = cvtrain.x)
   fit.pred_shuf <- predict(cvfit_shuf, newdata = cvtest.x)
   preds.cv_shuf <- fit.pred_shuf$posterior
   preds.cv_shuf <- as.data.frame(preds.cv_shuf)
@@ -1198,8 +1220,8 @@ for (i in 1:nloops){
 
 hist(cv.aucs_shuf)
 summary(cv.aucs_shuf)
-#Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
-#0.4940  0.5034  0.5102  0.5098  0.5172  0.5347 
+ ##  Min. 1st Qu.  Median    Mean 3rd Qu.    Max. 
+ #0.4698  0.4912  0.4988  0.4988  0.5051  0.5312 
 ```
  
 The AUC degrades to ~0.5 so we seem to be doing something right.
@@ -1283,7 +1305,7 @@ cv_control <- trainControl(method="cv",
 
 rf_grid <- expand.grid(
   mtry = 4:8,
-  splitrule = c("gini","extratrees", "hellinger") 
+  splitrule = c("gini","extratrees", "hellinger"),
   min.node.size = c(1)
 )
 
@@ -1326,7 +1348,7 @@ fitRF.predictions.prob <- predict(fitRF, newdata = test, type="prob")
 confusionMatrix(fitRF.predictions.raw, test$y)
 ```
 
-Using the default cutoff, our random forest gets a test accuracy of 0.9161, with Sensitivity 0.4953 and Specificity 0.9688.
+Using the default cutoff, our random forest gets a test accuracy of 0.9145, with Sensitivity 0.9663 and Specificity 0.5006.
 
 # ROC Curve and Optimal Cutoff
 
